tests/ui/parser/invalid-variable-definition-55587.stderr
error[E0164]: expected tuple struct or tuple variant, found associated function `Path::new`
  --> $DIR/invalid-variable-definition-55587.rs:5:9
   |
LL |     let Path::new();
   |         ^^^^^^^^^^^ `fn` calls are not allowed in patterns
   |
   = help: for more information, visit https://doc.rust-lang.org/book/ch19-00-patterns.html

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0164`.
