tests/ui/parser/invalid-variable-definition-55587.rs
// https://github.com/rust-lang/rust/issues/55587
use std::path::Path;

fn main() {
    let Path::new(); //~ ERROR expected tuple struct or tuple variant
}
